# MC833

./: .gitignore
TCP_Project/: CMakeLists.txt  conf.txt  main.c
TCP_Project/include/: client_tcp.h  server_tcp.h  uml.txt  utils.h
TCP_Project/src/: client_tcp.c  server_tcp.c  utils.c
